standards/gnds-2.0-alpha/alpha/c/src/v2.0/mean/Resonances.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Resonances is the basic handle type in this file. Example:
//    // Create a default Resonances object:
//    Resonances handle = ResonancesDefault();
// Functions involving Resonances are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_MEAN_RESONANCES
#define C_INTERFACE_ALPHA_V2_0_MEAN_RESONANCES

#include "GNDStk.h"
#include "v2.0/mean/ScatteringRadius.h"
#include "v2.0/mean/Resolved.h"
#include "v2.0/mean/Unresolved.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ResonancesClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Resonances
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ResonancesClass *Resonances;

// --- Const-aware handles.
typedef const struct ResonancesClass *const ConstHandle2ConstResonances;
typedef       struct ResonancesClass *const ConstHandle2Resonances;
typedef const struct ResonancesClass *      Handle2ConstResonances;
typedef       struct ResonancesClass *      Handle2Resonances;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstResonances
ResonancesDefaultConst();

// +++ Create, default
extern_c Handle2Resonances
ResonancesDefault();

// --- Create, general, const
extern_c Handle2ConstResonances
ResonancesCreateConst(
   const char *const href,
   ConstHandle2ConstScatteringRadius scatteringRadius,
   ConstHandle2ConstResolved resolved,
   ConstHandle2ConstUnresolved unresolved
);

// +++ Create, general
extern_c Handle2Resonances
ResonancesCreate(
   const char *const href,
   ConstHandle2ConstScatteringRadius scatteringRadius,
   ConstHandle2ConstResolved resolved,
   ConstHandle2ConstUnresolved unresolved
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ResonancesAssign(ConstHandle2Resonances This, ConstHandle2ConstResonances from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ResonancesDelete(ConstHandle2ConstResonances This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ResonancesRead(ConstHandle2Resonances This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ResonancesWrite(ConstHandle2ConstResonances This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ResonancesPrint(ConstHandle2ConstResonances This);

// +++ Print to standard output, as XML
extern_c int
ResonancesPrintXML(ConstHandle2ConstResonances This);

// +++ Print to standard output, as JSON
extern_c int
ResonancesPrintJSON(ConstHandle2ConstResonances This);


// -----------------------------------------------------------------------------
// Metadatum: href
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ResonancesHrefHas(ConstHandle2ConstResonances This);

// +++ Get
// +++ Returns by value
extern_c const char *
ResonancesHrefGet(ConstHandle2ConstResonances This);

// +++ Set
extern_c void
ResonancesHrefSet(ConstHandle2Resonances This, const char *const href);


// -----------------------------------------------------------------------------
// Child: scatteringRadius
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ResonancesScatteringRadiusHas(ConstHandle2ConstResonances This);

// --- Get, const
extern_c Handle2ConstScatteringRadius
ResonancesScatteringRadiusGetConst(ConstHandle2ConstResonances This);

// +++ Get, non-const
extern_c Handle2ScatteringRadius
ResonancesScatteringRadiusGet(ConstHandle2Resonances This);

// +++ Set
extern_c void
ResonancesScatteringRadiusSet(ConstHandle2Resonances This, ConstHandle2ConstScatteringRadius scatteringRadius);


// -----------------------------------------------------------------------------
// Child: resolved
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ResonancesResolvedHas(ConstHandle2ConstResonances This);

// --- Get, const
extern_c Handle2ConstResolved
ResonancesResolvedGetConst(ConstHandle2ConstResonances This);

// +++ Get, non-const
extern_c Handle2Resolved
ResonancesResolvedGet(ConstHandle2Resonances This);

// +++ Set
extern_c void
ResonancesResolvedSet(ConstHandle2Resonances This, ConstHandle2ConstResolved resolved);


// -----------------------------------------------------------------------------
// Child: unresolved
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ResonancesUnresolvedHas(ConstHandle2ConstResonances This);

// --- Get, const
extern_c Handle2ConstUnresolved
ResonancesUnresolvedGetConst(ConstHandle2ConstResonances This);

// +++ Get, non-const
extern_c Handle2Unresolved
ResonancesUnresolvedGet(ConstHandle2Resonances This);

// +++ Set
extern_c void
ResonancesUnresolvedSet(ConstHandle2Resonances This, ConstHandle2ConstUnresolved unresolved);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/mean/Resonances/src/custom.h"

#undef extern_c
#endif